--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   }
 }
